--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,6 +19,9 @@
       ]
     }
   ],
+  "web_accessible_resources": [
+    "data/names.json"
+  ],
   "page_action": {
     "default_title": "glance",
     "default_popup": "popup.html"
